--- a/public/admin.html
+++ b/public/admin.html
@@ -29,7 +29,7 @@
       <div class="MainLogo">
         <div class="LogoBox">
           <img
-            src="./assets/images/Logo.png"
+            src="/assets/images/Logo.png"
             alt="바로가기"
           />
         </div>
@@ -37,7 +37,7 @@
       <div class="GlobalNav">
         <div class="DashboardBox">
           <img
-            src="./assets/images/folder.png"
+            src="/assets/images/folder.png"
             alt="대시보드"
           />
           <p>Dashboard</p>
@@ -360,7 +360,7 @@
                 <iframe
                   title="모바일 미리보기"
                   data-preview-iframe
-                  src="index.html"
+                  src="/index.html"
                   loading="lazy"
                   sandbox="allow-same-origin allow-scripts allow-forms allow-pointer-lock allow-modals allow-popups allow-downloads"
                 ></iframe>
@@ -378,7 +378,7 @@
     </div>
     <script
       type="module"
-      src="./scripts/admin.js"
+      src="/scripts/admin.js"
     ></script>
   </body>
 </html>
