Refactor test list rendering and styles for improved layout and accessibility
- Updated HTML structure in index.html to enhance semantic clarity and styling.
- Modified homeRenderer.js to align with new HTML structure, improving test card rendering.
- Added new CSS styles in index.css for better layout and visual consistency of test articles and their elements.

--- a/public/index.html
+++ b/public/index.html
@@ -94,66 +94,62 @@
         </section>
 
         <section
-          class="section section--tests"
+          class="section SectionTestList"
           aria-labelledby="today-tests-heading"
         >
           <div class="section__inner">
-            <div class="section__header">
+            <div class="TestListTittle">
               <h2 id="today-tests-heading">오늘의 테스트</h2>
             </div>
             <div
-              class="test-grid"
+              class="TestListArticle"
               data-tests-grid
             >
-              <article class="ds-card ds-card--test">
-                <div class="ds-card__thumbnail">
-                  <div class="ds-card__content">
-                    <div class="ds-card__thumbnail-inner"></div>
-                    <div class="ds-card__body">
-                      <h3>첫번째 테스트</h3>
-                      <p class="ds-card__tags">#해시태그#해시태그#해시태그</p>
-                    </div>
-                  </div>
+              <div class="Article">
+                <div class="TestListAricleImg">
+                  <img
+                    src=""
+                    alt="#"
+                  />
                 </div>
-              </article>
-              <article class="ds-card ds-card--test">
-                <div class="ds-card__thumbnail">
-                  <div class="ds-card__content">
-                    <div class="ds-card__thumbnail-inner"></div>
-                    <div class="ds-card__body">
-                      <h3>두번째 테스트</h3>
-                      <p class="ds-card__tags">#해시태그#해시태그#해시태그</p>
-                    </div>
-                  </div>
+                <div class="TestTittle">첫번째 테스트</div>
+                <div class="TestListHashTag">
+                  <div class="HashTag">#해시태그1</div>
+                  <div class="HashTag">#해시태그2</div>
+                  <div class="HashTag">#해시태그3</div>
+                  <div class="HashTag">#해시태그4</div>
                 </div>
-              </article>
-              <article class="ds-card ds-card--test">
-                <div class="ds-card__thumbnail">
-                  <div class="ds-card__content">
-                    <div class="ds-card__thumbnail-inner"></div>
-                    <div class="ds-card__body">
-                      <h3>세번째 테스트</h3>
-                      <p class="ds-card__tags">#해시태그#해시태그#해시태그</p>
-                    </div>
-                  </div>
+              </div>
+              <div class="Article">
+                <div class="TestListAricleImg">
+                  <img
+                    src="#"
+                    alt="#"
+                  />
                 </div>
-              </article>
-            </div>
-            <div class="section__footer">
-              <button
-                class="ds-button ds-button--ghost"
-                type="button"
-                data-all-tests-trigger
-                aria-label="전체 테스트 목록 보기"
-              >
-                <img
-                  src="/assets/images/Other.png"
-                  alt="더보기 아이콘"
-                  width="24"
-                  height="24"
-                />
-                더 많은 테스트
-              </button>
+                <div class="TestTittle">첫번째 테스트</div>
+                <div class="TestListHashTag">
+                  <div class="HashTag">#해시태그1</div>
+                  <div class="HashTag">#해시태그2</div>
+                  <div class="HashTag">#해시태그3</div>
+                  <div class="HashTag">#해시태그4</div>
+                </div>
+              </div>
+              <div class="Article">
+                <div class="TestListAricleImg">
+                  <img
+                    src="#"
+                    alt="#"
+                  />
+                </div>
+                <div class="TestTittle">첫번째 테스트</div>
+                <div class="TestListHashTag">
+                  <div class="HashTag">#해시태그1</div>
+                  <div class="HashTag">#해시태그2</div>
+                  <div class="HashTag">#해시태그3</div>
+                  <div class="HashTag">#해시태그4</div>
+                </div>
+              </div>
             </div>
           </div>
         </section>
