Add footer section with button for viewing all tests in index.html

--- a/public/index.html
+++ b/public/index.html
@@ -151,6 +151,22 @@
                 </div>
               </div>
             </div>
+            <div class="section__footer">
+              <button
+                class="ds-button ds-button--ghost"
+                type="button"
+                data-all-tests-trigger
+                aria-label="전체 테스트 목록 보기"
+              >
+                <img
+                  src="../assets/images/Other.png"
+                  alt="더보기 아이콘"
+                  width="24"
+                  height="24"
+                />
+                더 많은 테스트
+              </button>
+            </div>
           </div>
         </section>
       </main>
