--- a/public/index.html
+++ b/public/index.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html lang="ko">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MBTI ZOO</title>
-    <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="styles/reset.css">
+    <link rel="stylesheet" href="styles/main.css">
     <link rel="shortcut icon" href="./images/favicon.png" type="image/x-icon">
 </head>
+
 <body>
     <div class="PageShell">
         <header id="headerScroll" class="Sticky">
-            <div  id="header" class="Head">
+            <div id="header" class="Head">
                 <div class="Logo">
                     <a href="index.html">
                         <img src="./images/mainLogo.png" alt="MBTIZOO바로가기">
@@ -37,47 +39,12 @@
                     <p>따뜻한 최신 심테</p>
                 </div>
                 <div class="NewTestListShell">
-                    <div class="NewTestShell test1">
+                    <div class="NewTestShell newtest">
                         <div class="NewTest">
                             <img src="#" alt="테스트 이미지">
-                            <h4>나의 SNS 사용 패턴 테스트</h4>
+                            <h4>테스트 이름</h4>
                             <div class="NewTestHashTag">
-                                <span class="HashTag">#SNS</span>
-                                <span class="HashTag">#인스타그램</span>
-                                <span class="HashTag">#소셜미디어</span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="NewTestShell">
-                        <div class="NewTest">
-                            <img src="#" alt="테스트 이미지">
-                            <h4>겨울 붕어빵 테스트</h4>
-                            <div class="NewTestHashTag">
-                                <span class="HashTag">#겨울</span>
-                                <span class="HashTag">#간식</span>
-                                <span class="HashTag">#붕어빵</span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="NewTestShell">
-                        <div class="NewTest">
-                            <img src="./images/Test1Sum.png" alt="테스트 이미지">
-                            <h4>여름 바캉스 스타일 테스트</h4>
-                            <div class="NewTestHashTag">
-                                <span class="HashTag">#여름</span>
-                                <span class="HashTag">#여행</span>
-                                <span class="HashTag">#바캉스</span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="NewTestShell">
-                        <div class="NewTest">
-                            <img src="#" alt="테스트 이미지">
-                            <h4>나의 커피 스타일 테스트</h4>
-                            <div class="NewTestHashTag">
-                                <span class="HashTag">#커피</span>
-                                <span class="HashTag">#카페</span>
-                                <span class="HashTag">#카페인</span>
+                                <span class="HashTag">#태그</span>
                             </div>
                         </div>
                     </div>
@@ -89,93 +56,12 @@
                     <p>TOP 심테</p>
                 </div>
                 <div class="NewTestListShell">
-                    <div class="NewTestShell">
+                    <div class="NewTestShell toptest">
                         <div class="NewTest">
                             <img src="#" alt="테스트 이미지">
                             <h4>테스트 이름</h4>
                             <div class="NewTestHashTag">
-                                <span class="HashTag">#태그1</span>
-                                <span class="HashTag">#태그2</span>
-                                <span class="HashTag">#태그3</span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="NewTestShell">
-                        <div class="NewTest">
-                            <img src="#" alt="테스트 이미지">
-                            <h4>테스트 이름</h4>
-                            <div class="NewTestHashTag">
-                                <span class="HashTag">#태그1</span>
-                                <span class="HashTag">#태그2</span>
-                                <span class="HashTag">#태그3</span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="NewTestShell">
-                        <div class="NewTest">
-                            <img src="#" alt="테스트 이미지">
-                            <h4>테스트 이름</h4>
-                            <div class="NewTestHashTag">
-                                <span class="HashTag">#태그1</span>
-                                <span class="HashTag">#태그2</span>
-                                <span class="HashTag">#태그3</span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="NewTestShell">
-                        <div class="NewTest">
-                            <img src="#" alt="테스트 이미지">
-                            <h4>테스트 이름</h4>
-                            <div class="NewTestHashTag">
-                                <span class="HashTag">#태그1</span>
-                                <span class="HashTag">#태그2</span>
-                                <span class="HashTag">#태그3</span>
-                            </div>
-                        </div>
-                    </div>
-                </div> 
-                <div class="NewTestListShell Shellheight">
-                    <div class="NewTestShell">
-                        <div class="NewTest">
-                            <img src="#" alt="테스트 이미지">
-                            <h4>테스트 이름</h4>
-                            <div class="NewTestHashTag">
-                                <span class="HashTag">#태그1</span>
-                                <span class="HashTag">#태그2</span>
-                                <span class="HashTag">#태그3</span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="NewTestShell">
-                        <div class="NewTest">
-                            <img src="#" alt="테스트 이미지">
-                            <h4>테스트 이름</h4>
-                            <div class="NewTestHashTag">
-                                <span class="HashTag">#태그1</span>
-                                <span class="HashTag">#태그2</span>
-                                <span class="HashTag">#태그3</span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="NewTestShell">
-                        <div class="NewTest">
-                            <img src="#" alt="테스트 이미지">
-                            <h4>테스트 이름</h4>
-                            <div class="NewTestHashTag">
-                                <span class="HashTag">#태그1</span>
-                                <span class="HashTag">#태그2</span>
-                                <span class="HashTag">#태그3</span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="NewTestShell">
-                        <div class="NewTest">
-                            <img src="#" alt="테스트 이미지">
-                            <h4>테스트 이름</h4>
-                            <div class="NewTestHashTag">
-                                <span class="HashTag">#태그1</span>
-                                <span class="HashTag">#태그2</span>
-                                <span class="HashTag">#태그3</span>
+                                <span class="HashTag">#태그</span>
                             </div>
                         </div>
                     </div>
@@ -214,28 +100,7 @@
         </footer>
     </div>
 </body>
+
 </html>
 
-<script>
-    const header = document.getElementById('header');
-    const headerScroll = document.getElementById('headerScroll');
-    const MainTop = document.getElementById('MainTop');
-
-    window.addEventListener('scroll', () => {
-        if (window.scrollY > 60) {
-            console.log("스크롤내렸다.")
-            header.classList.add('scrolled');
-            headerScroll.style.backgroundColor = 'transparent';
-            MainTop.style.marginTop = '142px';
-        } else {
-            console.log("스크롤올렸다.")
-            header.classList.remove('scrolled');
-            headerScroll.style.backgroundColor = '#ffffff';
-            MainTop.style.marginTop = '0px';
-        }
-    });
-
-    document.querySelector(".test1").onclick = function () {
-        window.location.href = "testintro.html";
-    };
-</script>
+<script type="module" src="./scripts/main.js"></script>
