--- a/public/testintro.html
+++ b/public/testintro.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="ko">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MBTI ZOO</title>
-    <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="main.css">
-    <link rel="stylesheet" href="testintro.css">
+    <link rel="stylesheet" href="styles/reset.css">
+    <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="styles/testintro.css">
     <link rel="shortcut icon" href="./images/favicon.png" type="image/x-icon">
 </head>
+
 <body>
     <div class="PageShell testlistPageShell">
         <header class="Sticky">
@@ -27,35 +29,23 @@
         </header>
         <main class="TestIntroShell">
             <div class="IntroShellImg">
-                <img src="./images/Test1Sum.png" alt="테스트 썸네일">
+                <img src="#" alt="테스트 썸네일">
                 <div class="NewTestHashTag">
-                    <span class="HashTag">#SNS</span>
-                    <span class="HashTag">#인스타그램</span>
-                    <span class="HashTag">#소셜미디어</span>
-                    <span class="HashTag">#성격유형</span>
+                    <span class="HashTag">#태그</span>
+                    <span class="HashTag">#태그</span>
+                    <span class="HashTag">#태그</span>
                 </div>
             </div>
             <div class="IntroShellTextBox">
-                <h2>나의 SNS 사용 패턴 테스트</h2>
+                <h2>테스트 이름</h2>
                 <div class="Creator">
-                    <img src="./images/Creatorueng.png" alt="제작자 이미지">
+                    <img src="#" alt="제작자 이미지">
                     <p class="CreatorName">
-                        우애앵애
+                        제작자 이름
                     </p>
                 </div>
                 <div class="IntroDescription">
-                    인스타 스토리는 얼마나 자주 올리는지,<br>
-                    댓글은 막 남기는 편인지 고민하고 쓰는 편인지… 👀<br>
-                    <br>
-                    이런 당신의 SNS 사용 습관으로<br>
-                    성격 유형을 살짝 들여다봐요 ✨<br>
-                    <br>
-                    몇 가지 질문에 답하면<br>
-                    ✔️ 당신이 어떤 선택을 자주 하는지<br>
-                    ✔️ 어떤 포인트에 끌리는 타입인지<br>
-                    <br>
-                    귀여운 해설이랑 같이<br>
-                    콕콕 알려드릴게요 💕<br>
+                    테스트 설명
                 </div>
                 <div class="IntroBtnShell">
                     <div class="TestStart">
@@ -65,7 +55,7 @@
                     </div>
                     <div class="TestShare">
                         <button type="button">
-                            <img src="./images/TestShare.png" alt="테스트 시작버튼">
+                            <img src="./images/TestShare.png" alt="테스트 공유버튼">
                         </button>
                     </div>
                 </div>
@@ -78,13 +68,13 @@
                         <img class="icon" src="./images/instagram.png" alt="인스타그램 바로가기">
                     </a>
                     <a href="#">
-                        <img class="icon" src="./images/katalk.png" alt="인스타그램 바로가기">
+                        <img class="icon" src="./images/katalk.png" alt="카카오톡 바로가기">
                     </a>
                     <a href="#">
-                        <img class="icon" src="./images/naver.png" alt="인스타그램 바로가기">
+                        <img class="icon" src="./images/naver.png" alt="네이버 바로가기">
                     </a>
                     <a href="#">
-                        <img class="icon" src="./images/mail.png" alt="인스타그램 바로가기">
+                        <img class="icon" src="./images/mail.png" alt="메일 바로가기">
                     </a>
                 </li>
             </ul>
@@ -96,3 +86,5 @@
         </footer>
     </div>
 </body>
+
+<script type="module" src="./scripts/testintro.js"></script>
