Refactor HTML structure and CSS styles for improved layout consistency across multiple pages
- Updated index.html, testintro.html, testlist.html, and testquiz.html to enhance HTML structure and readability.
- Adjusted CSS in main.css and added testlist.css for better layout and visual consistency.
- Improved JavaScript scroll handling in main.js and testlist.js for a more responsive header behavior.

--- a/public/testlist.html
+++ b/public/testlist.html
@@ -2,69 +2,70 @@
 <html lang="ko">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MBTI ZOO</title>
-    <link rel="stylesheet" href="styles/reset.css">
-    <link rel="stylesheet" href="styles/main.css">
-    <link rel="shortcut icon" href="./images/favicon.png" type="image/x-icon">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>MBTI ZOO</title>
+  <link rel="stylesheet" href="styles/reset.css">
+  <link rel="stylesheet" href="styles/main.css">
+  <link rel="stylesheet" href="styles/testlist.css">
+  <link rel="shortcut icon" href="./images/favicon.png" type="image/x-icon">
 </head>
 
 <body>
-    <div class="PageShell">
-        <header id="headerScroll" class="Sticky">
-            <div id="header" class="Head">
-                <div class="Logo">
-                    <a href="index.html">
-                        <img src="./images/mainLogo.png" alt="MBTIZOO바로가기">
-                    </a>
-                </div>
-                <div class="HeaderGnb holographic-container">
-                    <div class="holographic-card">
-                        <a>나의 MBTI는?</a>
-                    </div>
-                </div>
+  <div class="PageShell">
+    <header id="headerScroll" class="Sticky">
+      <div id="header" class="Head">
+        <div class="Logo">
+          <a href="index.html">
+            <img src="./images/mainLogo.png" alt="MBTIZOO바로가기">
+          </a>
+        </div>
+        <div class="HeaderGnb holographic-container">
+          <div class="holographic-card">
+            <a>나의 MBTI는?</a>
+          </div>
+        </div>
+      </div>
+    </header>
+    <main id="MainTop">
+      <div class="NewTestList">
+        <div class="NewTestListShell">
+          <div class="NewTestShell test1">
+            <div class="NewTest">
+              <img src="#" alt="테스트 이미지">
+              <h4>테스트 이름</h4>
+              <div class="NewTestHashTag">
+                <span class="HashTag">#태그</span>
+              </div>
             </div>
-        </header>
-        <main id="MainTop">
-            <div class="NewTestList">
-                <div class="NewTestListShell">
-                    <div class="NewTestShell test1">
-                        <div class="NewTest">
-                            <img src="#" alt="테스트 이미지">
-                            <h4>테스트 이름</h4>
-                            <div class="NewTestHashTag">
-                                <span class="HashTag">#태그</span>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </main>
-        <footer>
-            <ul>
-                <li>
-                    <a href="#">
-                        <img class="icon" src="./images/instagram.png" alt="인스타그램 바로가기">
-                    </a>
-                    <a href="#">
-                        <img class="icon" src="./images/katalk.png" alt="인스타그램 바로가기">
-                    </a>
-                    <a href="#">
-                        <img class="icon" src="./images/naver.png" alt="인스타그램 바로가기">
-                    </a>
-                    <a href="#">
-                        <img class="icon" src="./images/mail.png" alt="인스타그램 바로가기">
-                    </a>
-                </li>
-            </ul>
-            <div class="Copyright">
-                <span class="Copy">
-                    Copyright &copy; 2025; Designed by DREAMPROJECT
-                </span>
-            </div>
-        </footer>
-    </div>
+          </div>
+        </div>
+      </div>
+    </main>
+    <footer>
+      <ul>
+        <li>
+          <a href="#">
+            <img class="icon" src="./images/instagram.png" alt="인스타그램 바로가기">
+          </a>
+          <a href="#">
+            <img class="icon" src="./images/katalk.png" alt="인스타그램 바로가기">
+          </a>
+          <a href="#">
+            <img class="icon" src="./images/naver.png" alt="인스타그램 바로가기">
+          </a>
+          <a href="#">
+            <img class="icon" src="./images/mail.png" alt="인스타그램 바로가기">
+          </a>
+        </li>
+      </ul>
+      <div class="Copyright">
+        <span class="Copy">
+          Copyright &copy; 2025; Designed by DREAMPROJECT
+        </span>
+      </div>
+    </footer>
+  </div>
 </body>
 
 </html>
