--- a/public/testquiz.html
+++ b/public/testquiz.html
@@ -2,39 +2,39 @@
 <html lang="ko">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MBTI ZOO</title>
-    <link rel="stylesheet" href="styles/reset.css">
-    <link rel="stylesheet" href="styles/testquiz.css">
-    <link rel="shortcut icon" href="./images/favicon.png" type="image/x-icon">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>MBTI ZOO</title>
+  <link rel="stylesheet" href="styles/reset.css">
+  <link rel="stylesheet" href="styles/testquiz.css">
+  <link rel="shortcut icon" href="./images/favicon.png" type="image/x-icon">
 </head>
 
 <body>
-    <div class="PageShell testlistPageShell">
-        <header class="Sticky">
-            <div class="Head">
-                <div class="Logo">
-                    <a href="index.html">
-                        <img src="./images/mainLogo.png" alt="MBTIZOO바로가기">
-                    </a>
-                </div>
-            </div>
-        </header>
-        <main>
-            <div class="ProgressBar">
-                <div class="Progress">
-                </div>
-            </div>
-            <div class="TestImg">
-                <img src="./assets/test-summer/images/thumbnail.png" alt="테스트 이미지">
-            </div>
-            <div class="TestSelectBtn">
-                <button type="button" class="select1">문항1</button>
-                <button type="button" class="select2">문항2</button>
-            </div>
-        </main>
-    </div>
+  <div class="PageShell testlistPageShell">
+    <header class="Sticky">
+      <div class="Head">
+        <div class="Logo">
+          <a href="index.html">
+            <img src="./images/mainLogo.png" alt="MBTIZOO바로가기">
+          </a>
+        </div>
+      </div>
+    </header>
+    <main>
+      <div class="ProgressBar">
+        <div class="Progress">
+        </div>
+      </div>
+      <div class="TestImg">
+        <img src="#" alt="테스트 이미지">
+      </div>
+      <div class="TestSelectBtn">
+        <button type="button" class="select1"></button>
+        <button type="button" class="select2"></button>
+      </div>
+    </main>
+  </div>
 </body>
 
 <script type="module" src="./scripts/testquiz.js"></script>
