--- a/public/index.html
+++ b/public/index.html
@@ -81,13 +81,13 @@
             <img class="icon" src="./images/instagram.png" alt="인스타그램 바로가기">
           </a>
           <a href="#">
-            <img class="icon" src="./images/katalk.png" alt="인스타그램 바로가기">
+            <img class="icon" src="./images/katalk.png" alt="카카오톡 바로가기">
           </a>
           <a href="#">
-            <img class="icon" src="./images/naver.png" alt="인스타그램 바로가기">
+            <img class="icon" src="./images/naver.png" alt="네이버 바로가기">
           </a>
           <a href="#">
-            <img class="icon" src="./images/mail.png" alt="인스타그램 바로가기">
+            <img class="icon" src="./images/mail.png" alt="메일 바로가기">
           </a>
         </li>
       </ul>
