--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,9 @@
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;500;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles/reset.css">
   <link rel="stylesheet" href="styles/main.css">
-  <link rel="shortcut icon" href="./images/favicon.png" type="image/x-icon">
+  <link rel="shortcut icon" href="https://pub-9394623df95a4f669f145a4ede63d588.r2.dev/assets/images/favicon.png"
+    type="image/x-icon">
+  <script src="./scripts/config.js"></script>
 </head>
 
 <body>
@@ -19,7 +21,7 @@
       <div id="header" class="Head">
         <div class="Logo">
           <a href="index.html">
-            <img src="./images/mainLogo.png" alt="MBTIZOO바로가기">
+            <img src="https://pub-9394623df95a4f669f145a4ede63d588.r2.dev/assets/images/mainLogo.png" alt="MBTIZOO바로가기">
           </a>
         </div>
         <div class="HeaderGnb holographic-container">
@@ -32,12 +34,13 @@
     <main id="MainTop">
       <div class="MainBanner">
         <a href="./testlist.html">
-          <img src="./images/mainbanner.png" alt="테스트 리스트로 바로가기">
+          <img src="https://pub-9394623df95a4f669f145a4ede63d588.r2.dev/assets/images/mainbanner.png"
+            alt="테스트 리스트로 바로가기">
         </a>
       </div>
       <div class="NewTestList">
         <div class="NewTestListTittle">
-          <img src="./images/new.png" alt="">
+          <img src="https://pub-9394623df95a4f669f145a4ede63d588.r2.dev/assets/images/new.png" alt="">
           <p>따뜻한 최신 심테</p>
         </div>
         <div class="NewTestListShell">
@@ -54,7 +57,7 @@
       </div>
       <div class="NewTestList">
         <div class="NewTestListTittle">
-          <img class="fire" src="./images/fire.png" alt="">
+          <img class="fire" src="https://pub-9394623df95a4f669f145a4ede63d588.r2.dev/assets/images/fire.png" alt="">
           <p>TOP 심테</p>
         </div>
         <div class="NewTestListShell">
@@ -81,16 +84,20 @@
       <ul>
         <li>
           <a href="#">
-            <img class="icon" src="./images/instagram.png" alt="인스타그램 바로가기">
+            <img class="icon" src="https://pub-9394623df95a4f669f145a4ede63d588.r2.dev/assets/images/instagram.png"
+              alt="인스타그램 바로가기">
           </a>
           <a href="#">
-            <img class="icon" src="./images/katalk.png" alt="카카오톡 바로가기">
+            <img class="icon" src="https://pub-9394623df95a4f669f145a4ede63d588.r2.dev/assets/images/katalk.png"
+              alt="카카오톡 바로가기">
           </a>
           <a href="#">
-            <img class="icon" src="./images/naver.png" alt="네이버 바로가기">
+            <img class="icon" src="https://pub-9394623df95a4f669f145a4ede63d588.r2.dev/assets/images/naver.png"
+              alt="네이버 바로가기">
           </a>
           <a href="#">
-            <img class="icon" src="./images/mail.png" alt="메일 바로가기">
+            <img class="icon" src="https://pub-9394623df95a4f669f145a4ede63d588.r2.dev/assets/images/mail.png"
+              alt="메일 바로가기">
           </a>
         </li>
       </ul>
