--- a/public/testlist.html
+++ b/public/testlist.html
@@ -11,7 +11,9 @@
   <link rel="stylesheet" href="styles/reset.css">
   <link rel="stylesheet" href="styles/main.css">
   <link rel="stylesheet" href="styles/testlist.css">
-  <link rel="shortcut icon" href="./images/favicon.png" type="image/x-icon">
+  <link rel="shortcut icon" href="https://pub-9394623df95a4f669f145a4ede63d588.r2.dev/assets/images/favicon.png"
+    type="image/x-icon">
+  <script src="./scripts/config.js"></script>
 </head>
 
 <body>
@@ -20,7 +22,7 @@
       <div id="header" class="Head">
         <div class="Logo">
           <a href="index.html">
-            <img src="./images/mainLogo.png" alt="MBTIZOO바로가기">
+            <img src="https://pub-9394623df95a4f669f145a4ede63d588.r2.dev/assets/images/mainLogo.png" alt="MBTIZOO바로가기">
           </a>
         </div>
         <div class="HeaderGnb holographic-container">
@@ -49,16 +51,20 @@
       <ul>
         <li>
           <a href="#">
-            <img class="icon" src="./images/instagram.png" alt="인스타그램 바로가기">
+            <img class="icon" src="https://pub-9394623df95a4f669f145a4ede63d588.r2.dev/assets/images/instagram.png"
+              alt="인스타그램 바로가기">
           </a>
           <a href="#">
-            <img class="icon" src="./images/katalk.png" alt="인스타그램 바로가기">
+            <img class="icon" src="https://pub-9394623df95a4f669f145a4ede63d588.r2.dev/assets/images/katalk.png"
+              alt="인스타그램 바로가기">
           </a>
           <a href="#">
-            <img class="icon" src="./images/naver.png" alt="인스타그램 바로가기">
+            <img class="icon" src="https://pub-9394623df95a4f669f145a4ede63d588.r2.dev/assets/images/naver.png"
+              alt="인스타그램 바로가기">
           </a>
           <a href="#">
-            <img class="icon" src="./images/mail.png" alt="인스타그램 바로가기">
+            <img class="icon" src="https://pub-9394623df95a4f669f145a4ede63d588.r2.dev/assets/images/mail.png"
+              alt="인스타그램 바로가기">
           </a>
         </li>
       </ul>
