--- a/public/testresult.html
+++ b/public/testresult.html
@@ -12,7 +12,9 @@
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="styles/testintro.css">
     <link rel="stylesheet" href="styles/testresult.css">
-    <link rel="shortcut icon" href="./images/favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="https://pub-9394623df95a4f669f145a4ede63d588.r2.dev/assets/images/favicon.png"
+        type="image/x-icon">
+    <script src="./scripts/config.js"></script>
 </head>
 
 <body>
@@ -21,7 +23,8 @@
             <div class="Head">
                 <div class="Logo">
                     <a href="index.html">
-                        <img src="./images/mainLogo.png" alt="MBTIZOO바로가기">
+                        <img src="https://pub-9394623df95a4f669f145a4ede63d588.r2.dev/assets/images/mainLogo.png"
+                            alt="MBTIZOO바로가기">
                     </a>
                 </div>
                 <div class="HeaderGnb holographic-container">
@@ -39,12 +42,14 @@
                 <div class="ResultBtnShell">
                     <div class="Restart">
                         <button type="button">
-                            <img src="./images/TestRestart.png" alt="테스트 다시하기">
+                            <img src="https://pub-9394623df95a4f669f145a4ede63d588.r2.dev/assets/images/TestRestart.png"
+                                alt="테스트 다시하기">
                         </button>
                     </div>
                     <div class="TestShare">
                         <button type="button">
-                            <img src="./images/TestShare.png" alt="공유하기">
+                            <img src="https://pub-9394623df95a4f669f145a4ede63d588.r2.dev/assets/images/TestShare.png"
+                                alt="공유하기">
                         </button>
                     </div>
                 </div>
@@ -54,16 +59,24 @@
             <ul>
                 <li>
                     <a href="#">
-                        <img class="icon" src="./images/instagram.png" alt="인스타그램 바로가기">
+                        <img class="icon"
+                            src="https://pub-9394623df95a4f669f145a4ede63d588.r2.dev/assets/images/instagram.png"
+                            alt="인스타그램 바로가기">
                     </a>
                     <a href="#">
-                        <img class="icon" src="./images/katalk.png" alt="카카오톡 바로가기">
+                        <img class="icon"
+                            src="https://pub-9394623df95a4f669f145a4ede63d588.r2.dev/assets/images/katalk.png"
+                            alt="카카오톡 바로가기">
                     </a>
                     <a href="#">
-                        <img class="icon" src="./images/naver.png" alt="네이버 바로가기">
+                        <img class="icon"
+                            src="https://pub-9394623df95a4f669f145a4ede63d588.r2.dev/assets/images/naver.png"
+                            alt="네이버 바로가기">
                     </a>
                     <a href="#">
-                        <img class="icon" src="./images/mail.png" alt="메일 바로가기">
+                        <img class="icon"
+                            src="https://pub-9394623df95a4f669f145a4ede63d588.r2.dev/assets/images/mail.png"
+                            alt="메일 바로가기">
                     </a>
                 </li>
             </ul>
