Refactor image asset handling to use data attributes for dynamic loading
- Updated HTML files to replace direct image URLs with data attributes for asset paths.
- Enhanced config.js to automatically apply asset URLs from data attributes.
- Adjusted CSS files to utilize CSS variables for background images, improving maintainability and consistency.

--- a/public/testquiz.html
+++ b/public/testquiz.html
@@ -10,8 +10,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;500;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles/reset.css">
   <link rel="stylesheet" href="styles/testquiz.css">
-  <link rel="shortcut icon" href="https://pub-9394623df95a4f669f145a4ede63d588.r2.dev/assets/images/favicon.png"
-    type="image/x-icon">
+  <link rel="shortcut icon" data-asset-href="assets/images/favicon.png" type="image/x-icon">
   <script src="./scripts/config.js"></script>
 </head>
 
@@ -21,7 +20,7 @@
       <div class="Head">
         <div class="Logo">
           <a href="index.html">
-            <img src="https://pub-9394623df95a4f669f145a4ede63d588.r2.dev/assets/images/mainLogo.png" alt="MBTIZOO바로가기">
+            <img data-asset-src="assets/images/mainLogo.png" alt="MBTIZOO바로가기">
           </a>
         </div>
       </div>
