Update email links in HTML files to direct to a specified email address
- Changed placeholder links to a mailto link for the email address dreamp0403@gmail.com in index.html, testintro.html, testlist.html, and testresult.html.
- This update enhances user accessibility for contacting via email.

--- a/public/testresult.html
+++ b/public/testresult.html
@@ -83,7 +83,7 @@
                     <a href="#">
                         <img class="icon" data-asset-src="assets/images/naver.png" alt="네이버 바로가기">
                     </a>
-                    <a href="#">
+                    <a href="mailto:dreamp0403@gmail.com">
                         <img class="icon" data-asset-src="assets/images/mail.png" alt="메일 바로가기">
                     </a>
                 </li>
