--- a/public/testlist.html
+++ b/public/testlist.html
@@ -78,7 +78,7 @@
           <a href="#">
             <img class="icon" data-asset-src="assets/images/naver.png" alt="인스타그램 바로가기">
           </a>
-          <a href="#">
+          <a href="mailto:dreamp0403@gmail.com">
             <img class="icon" data-asset-src="assets/images/mail.png" alt="인스타그램 바로가기">
           </a>
         </li>
