Enhance asset handling and caching in onRequestGet function
- Implemented edge caching using Cloudflare Cache API to improve response times for asset requests.
- Added logic to bypass cache based on request headers and store responses in cache when applicable.
- Updated asset attribute injection in config.js to support dynamic loading and improve resource management.
- Preloaded key images in HTML files to optimize loading performance.
- Set default CSS variables for background images to ensure faster rendering during initial load.

--- a/public/testquiz.html
+++ b/public/testquiz.html
@@ -31,7 +31,7 @@
   <link rel="stylesheet" href="styles/reset.css">
   <link rel="stylesheet" href="styles/testquiz.css">
   <link rel="shortcut icon" data-asset-href="assets/images/favicon.png" type="image/x-icon">
-  <script src="./scripts/config.js"></script>
+  <script src="./scripts/config.js" defer></script>
 </head>
 
 <body>
