--- a/public/index.html
+++ b/public/index.html
@@ -30,8 +30,10 @@
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;500;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles/reset.css">
   <link rel="stylesheet" href="styles/main.css">
+  <link rel="preload" as="image" href="/assets/images/mainLogo.png" fetchpriority="high">
+  <link rel="preload" as="image" href="/assets/images/mainbanner.png" fetchpriority="high">
   <link rel="shortcut icon" data-asset-href="assets/images/favicon.png" type="image/x-icon">
-  <script src="./scripts/config.js"></script>
+  <script src="./scripts/config.js" defer></script>
 </head>
 
 <body>
