--- a/public/testlist.html
+++ b/public/testlist.html
@@ -32,7 +32,7 @@
   <link rel="stylesheet" href="styles/main.css">
   <link rel="stylesheet" href="styles/testlist.css">
   <link rel="shortcut icon" data-asset-href="assets/images/favicon.png" type="image/x-icon">
-  <script src="./scripts/config.js"></script>
+  <script src="./scripts/config.js" defer></script>
 </head>
 
 <body>
