Refactor asset handling to use public R2 URLs and remove asset proxy
- Updated routing configuration to exclude the `/assets/*` proxy, enhancing performance by loading assets directly from the public R2 base URL.
- Revised documentation to reflect changes in asset loading strategy, emphasizing the use of absolute URLs for images and JSON.
- Removed the asset proxy function and related code, streamlining the asset management process and improving load times.

--- a/public/index.html
+++ b/public/index.html
@@ -19,19 +19,23 @@
   <meta property="og:title" content="MBTI ZOO | 심리 테스트 모음">
   <meta property="og:description" content="MBTI ZOO에서 다양한 MBTI 기반 심리 테스트를 즐겨보세요.">
   <meta property="og:url" content="https://dreamp.org/index.html">
-  <meta property="og:image" content="https://dreamp.org/assets/images/mainbanner.png">
+  <meta property="og:image" content="https://pub-9394623df95a4f669f145a4ede63d588.r2.dev/assets/images/mainbanner.png">
 
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="MBTI ZOO | 심리 테스트 모음">
   <meta name="twitter:description" content="MBTI ZOO에서 다양한 MBTI 기반 심리 테스트를 즐겨보세요.">
-  <meta name="twitter:image" content="https://dreamp.org/assets/images/mainbanner.png">
+  <meta name="twitter:image" content="https://pub-9394623df95a4f669f145a4ede63d588.r2.dev/assets/images/mainbanner.png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="dns-prefetch" href="https://pub-9394623df95a4f669f145a4ede63d588.r2.dev">
+  <link rel="preconnect" href="https://pub-9394623df95a4f669f145a4ede63d588.r2.dev" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;500;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles/reset.css">
   <link rel="stylesheet" href="styles/main.css">
-  <link rel="preload" as="image" href="/assets/images/mainLogo.png" fetchpriority="high">
-  <link rel="preload" as="image" href="/assets/images/mainbanner.png" fetchpriority="high">
+  <link rel="preload" as="image" href="https://pub-9394623df95a4f669f145a4ede63d588.r2.dev/assets/images/mainLogo.png"
+    fetchpriority="high">
+  <link rel="preload" as="image" href="https://pub-9394623df95a4f669f145a4ede63d588.r2.dev/assets/images/mainbanner.png"
+    fetchpriority="high">
   <link rel="shortcut icon" data-asset-href="assets/images/favicon.png" type="image/x-icon">
   <script src="./scripts/config.js" defer></script>
 </head>
