Update asset handling to use same-origin proxy for improved performance
- Modified routing to include `/assets/*` for same-origin asset loading, enhancing performance and avoiding CORS issues.
- Updated documentation to reflect the new asset proxy implementation and its benefits for image loading.
- Adjusted asset URLs in HTML files to utilize the new same-origin paths, ensuring consistent resource management across the application.

--- a/public/testlist.html
+++ b/public/testlist.html
@@ -19,12 +19,12 @@
   <meta property="og:title" content="MBTI ZOO | 테스트 목록">
   <meta property="og:description" content="MBTI ZOO의 최신/인기 심리 테스트 목록을 확인해보세요.">
   <meta property="og:url" content="https://dreamp.org/testlist.html">
-  <meta property="og:image" content="https://pub-9394623df95a4f669f145a4ede63d588.r2.dev/assets/images/mainbanner.png">
+  <meta property="og:image" content="https://dreamp.org/assets/images/mainbanner.png">
 
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="MBTI ZOO | 테스트 목록">
   <meta name="twitter:description" content="MBTI ZOO의 최신/인기 심리 테스트 목록을 확인해보세요.">
-  <meta name="twitter:image" content="https://pub-9394623df95a4f669f145a4ede63d588.r2.dev/assets/images/mainbanner.png">
+  <meta name="twitter:image" content="https://dreamp.org/assets/images/mainbanner.png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;500;600;700&display=swap" rel="stylesheet">
