--- a/public/testintro.html
+++ b/public/testintro.html
@@ -19,12 +19,12 @@
   <meta property="og:title" content="MBTI ZOO | 테스트 소개">
   <meta property="og:description" content="테스트 소개를 확인하고 MBTI 기반 심리 테스트를 시작해보세요.">
   <meta property="og:url" content="https://dreamp.org/testintro.html">
-  <meta property="og:image" content="https://pub-9394623df95a4f669f145a4ede63d588.r2.dev/assets/images/mainbanner.png">
+  <meta property="og:image" content="https://dreamp.org/assets/images/mainbanner.png">
 
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="MBTI ZOO | 테스트 소개">
   <meta name="twitter:description" content="테스트 소개를 확인하고 MBTI 기반 심리 테스트를 시작해보세요.">
-  <meta name="twitter:image" content="https://pub-9394623df95a4f669f145a4ede63d588.r2.dev/assets/images/mainbanner.png">
+  <meta name="twitter:image" content="https://dreamp.org/assets/images/mainbanner.png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;500;600;700&display=swap" rel="stylesheet">
