Update asset handling to use public R2 URLs and enhance same-origin proxy functionality
- Set the default ASSETS_BASE to the public R2 URL for improved asset loading in production.
- Updated documentation to clarify the asset proxy's role in avoiding CORS issues and ensuring same-origin requests.
- Adjusted HTML files to reflect the new asset loading strategy, ensuring consistent resource management across the application.
- Enhanced caching policies in the asset proxy function to optimize performance and response times.

--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
   <meta name="twitter:image" content="https://dreamp.org/assets/images/mainbanner.png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <!-- Assets load from same-origin `/assets/*` (R2 proxy), so no R2 preconnect is needed. -->
+  <!-- Assets are served same-origin via `/assets/*` (Pages Functions + R2 binding) -->
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;500;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles/reset.css">
   <link rel="stylesheet" href="styles/main.css">
